--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "bcrypt": "^5.1.0",
+    "connect-mongodb-session": "^3.1.1",
+    "express-session": "^1.17.3",
     "framer-motion": "^10.12.4",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.8.1",
     "next": "latest",
+    "next-auth": "^4.22.1",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "react-pro-sidebar": "^1.0.0",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.10"
   },
