--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/server": "^11.10.0",
     "@hookform/resolvers": "^3.1.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
     "bcrypt": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
     "express-session": "^1.17.3",
     "framer-motion": "^10.12.4",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.8.1",
+    "mui": "^0.0.1",
     "next": "latest",
     "next-auth": "^4.22.1",
     "nookies": "^2.5.2",
@@ -21,12 +26,13 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-pro-sidebar": "^1.0.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
-    "@types/react": "16.9.17",
+    "@types/react": "^18.2.5",
     "typescript": "4.6.3"
   }
 }
