--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.8.1",
     "mui": "^0.0.1",
-    "next": "latest",
+    "next": "^13.4.3",
     "next-auth": "^4.22.1",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
