--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
     "express-session": "^1.17.3",
     "framer-motion": "^10.12.4",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.8.1",
+    "mongodb": "^4.16.0",
     "mui": "^0.0.1",
     "next": "^13.4.3",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.3",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
