--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.19.0",
     "@emotion/react": "^11.10.8",
     "@emotion/server": "^11.10.0",
     "@hookform/resolvers": "^3.1.0",
