--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/mongodb.js", "pages/index.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/mongodb.js", "pages/index.js", "pages/sign-up/[[...index]].tsx", "pages/sign-in/[[...index]].tsx", "middleware.ts", "constants/Layout.js"],
   "exclude": ["node_modules"]
 }
