--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.12.3",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "chart.js": "^4.3.0",
     "connect-mongodb-session": "^3.1.1",
     "express-session": "^1.17.3",
     "framer-motion": "^10.12.4",
