--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.17.0",
+    "@clerk/nextjs": "^4.19.0",
     "@emotion/react": "^11.10.8",
     "@emotion/server": "^11.10.0",
     "@hookform/resolvers": "^3.1.0",
@@ -14,10 +14,13 @@
     "@mui/material": "^5.12.3",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "connect-mongodb-session": "^3.1.1",
     "express-session": "^1.17.3",
     "framer-motion": "^10.12.4",
     "jsonwebtoken": "^9.0.0",
+    "lucide-react": "^0.241.0",
     "mongodb": "^4.16.0",
     "mui": "^0.0.1",
     "next": "^13.4.3",
@@ -31,7 +34,9 @@
     "react-pro-sidebar": "^1.0.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.2",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "tailwind-merge": "^1.13.0",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
