--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@radix-ui/react-select": "^1.2.2",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "connect-mongodb-session": "^3.1.1",
     "express-session": "^1.17.3",
     "framer-motion": "^10.12.4",
