--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-pro-sidebar": "^1.0.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.2",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.10",
     "tailwind-merge": "^1.13.0",
     "tailwindcss-animate": "^1.0.5"
