--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.12.3",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-select": "^1.2.2",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
